# pydantic-explain

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  index.html  objects.inv  pyproject.toml  seal.toml  search.json  sitemap.xml  zensical.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  zizmor.yml
.github/ISSUE_TEMPLATE/: 1_bug_report.yaml  2_question.yaml
.github/workflows/: ci.yaml  ci.yml  release.yaml  release.yml
.karva_cache/run-1771625560325/worker-0/: durations.json
.karva_cache/run-1771625560325/worker-1/: durations.json  stats.json
.karva_cache/run-1771625560325/worker-10/: durations.json
.karva_cache/run-1771625560325/worker-11/: durations.json
.karva_cache/run-1771625560325/worker-12/: durations.json
.karva_cache/run-1771625560325/worker-13/: durations.json  stats.json
.karva_cache/run-1771625560325/worker-2/: durations.json
.karva_cache/run-1771625560325/worker-3/: durations.json
.karva_cache/run-1771625560325/worker-4/: durations.json
.karva_cache/run-1771625560325/worker-5/: durations.json
.karva_cache/run-1771625560325/worker-6/: durations.json
.karva_cache/run-1771625560325/worker-7/: durations.json
.karva_cache/run-1771625560325/worker-8/: durations.json
.karva_cache/run-1771625560325/worker-9/: durations.json
.karva_cache/run-1771625603148/worker-0/: durations.json  stats.json
.karva_cache/run-1771625603148/worker-1/: durations.json  stats.json
api/: index.html
docs/: get-started.md  index.md
docs/api/: index.md
docs/stylesheets/: extra.css
get-started/: index.html
scripts/: prepare_docs.py
site/: 404.html  index.html  objects.inv  search.json  sitemap.xml
site/api/: index.html
site/get-started/: index.html
src/pydantic_errors/: __init__.py  _explain.py  _format.py  _types.py
src/pydantic_explain/: __init__.py  _explain.py  _filter.py  _format.py  _rich.py  _types.py
tests/: conftest.py  test_explain.py  test_filter.py  test_format.py  test_public_api.py  test_rich.py  test_types.py  test_validation_scenarios.py
(+31 files in other folders)
