[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pydantic_explain"]

[project]
name = "pydantic-explain"
version = "0.0.1-alpha.0"
description = "Human-readable error messages for Pydantic validation errors."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
rich = ["rich>=13.0"]

[project.urls]
Homepage = "https://github.com/MatthewMckee4/pydantic-explain"
Repository = "https://github.com/MatthewMckee4/pydantic-explain"
Issues = "https://github.com/MatthewMckee4/pydantic-explain/issues"

[dependency-groups]
dev = [
    "karva",
    "rich>=13.0",
    "ruff",
    "ty",
    "pre-commit",
]
docs = [
    "zensical",
    "mkdocstrings[python]",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "RUF", # ruff-specific
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "ANN", # flake8-annotations
    "D",   # pydocstyle
]
ignore = [
    "D100", # missing docstring in public module
    "D104", # missing docstring in public package
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["pydantic_explain", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
